[tool.poetry]
name = "penny"
version = "0.1.0"
description = ""
authors = ["matas <matas.tartenas@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
scipy = "^1.8.0"
h5py = "^3.6.0"
pygadgetreader = {git = "https://github.com/jveitchmichaelis/pygadgetreader.git"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
